# frameworks-demo

./: .env.example  .gitignore  README.md  requirements.txt
CrewAI-Tutorial/: Deployment.ipynb
CrewAI-Tutorial/General/: customer_support.ipynb  event_planning.ipynb  financial_analysis.ipynb  research_write_article.ipynb
CrewAI-Tutorial/job_application/: job_application_crew.ipynb
CrewAI-Tutorial/new_flow_project/: README.md  pyproject.toml
CrewAI-Tutorial/newproject/: README.md  pyproject.toml
CrewAI-Tutorial/newproject/src/newproject/: crew.py  main.py
CrewAI-Tutorial/research_write_article/: research_write_article.ipynb
Kameleon-Multiagent Framework/: shopifyproduct.json
Kameleon-Multiagent_Framework/: BrandRAG.py  FAQ-Support.txt  Routing.py  main.py
Kameleon-Multiagent_Framework/Chainlit-Demo/: chatwithgui.py  prompt.py
Kameleon-Multiagent_Framework/KameleonAI/: __init__.py  configuration.py  graph.py  main.py  (+4 more)
OpenAI-Tutorial/: additional_tools.py  assistants.py  function_calling.py  model_testing.py  structured_output.py
SalesSkills/: batch1.jsonl  batch2.jsonl  events.py  intentiontest.py  response1.jsonl  response2.jsonl  salesTest.py  salesprompts.py  shopifyproduct.py
langchain-demo/: context-doc.py  rag-conversation.py  rag.py  search.py  structured-output.py
langchain-demo-2/: retreival.py  structured-output.py  tool-calling.py
langgraph-demo/: controllability.py  human-in-loop.py  memory.py  persistance.py  state.py
langsmith-demo/: .env.example  dataset.py  evaluate-comparative.py  evaluator.py  observability.py  unit-test.py
(+25 files in other folders)
