[project]
name = "newproject"
version = "0.1.0"
description = "NewProject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
newproject = "newproject.main:run"
run_crew = "newproject.main:run"
train = "newproject.main:train"
replay = "newproject.main:replay"
test = "newproject.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
